# rust-web-app-yew

./: Cargo.toml  index.html  style.css
src/: main.rs  splitter.rs
src/components/: cell.rs  input.rs  mod.rs  row.rs
