[package]
name = "rust-web-app-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-logger = "0.2.0"
log = "0.4.16"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.29"
regex = "1.5.5"
lazy_static = "1.4.0"


[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]